--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#">Jobs</a>
       <a href="#">Internships</a>
       <a href="#">Training</a>
-      <button class="login-btn">Login</button>
+      <button class="login-btn" href="login.html">Login</button>
     </div>
   </nav>
 
